--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "eslint-plugin-svelte3": "^3.2.0",
     "prettier": "~2.2.1",
     "prettier-plugin-svelte": "^2.2.0",
-    "svelte": "^3.34.0"
+    "sass": "^1.37.5",
+    "svelte": "^3.34.0",
+    "svelte-preprocess": "^4.7.4"
   },
   "type": "module",
   "dependencies": {
